# Data_Literacy

./: .env.example  .gitignore  CLEANUP_GUIDE.md  DELETION_LOG.md  MIGRATION_SUMMARY.md  README.md  README_DATABASE_SETUP.md  README_POSTGRESQL.md  README_STARTUP.md  READY_TO_RUN.md  docker-compose.dev.yml  docker-compose.duolingo.yml  docker-compose.yml  frontend-cleanup-report.txt  master-cleanup.ps1  pyrightconfig.json  run_backend.ps1  run_frontend.ps1  seed_with_theme.ps1  start_all.ps1  start_backend.ps1  start_database.ps1  start_duolingo_platform.ps1  start_frontend.ps1  start_servers.ps1  start_servers_postgres.ps1
.data/redis/appendonlydir/: appendonly.aof.1.base.rdb
TECH_NOTES/: error-fixes-summary.md  flow-impl.md  lesson-nav-audit.md  new-flow-migration.md  unused-report.md
backend/: Dockerfile  alembic.ini
backend/app/core/: config.py  database.py  deps.py
backend/app/crud/: base.py  crud_user.py
backend/app/models/: module.py  progress.py  question.py  quiz.py
backend/app/schemas/: user.py
backend/app/services/: user_service.py
backend/scripts/: create_gamification_table.py  fix_database_schema.py  fix_enum_case.py  seed_duolingo_content.py  verify_db.py
content/worlds/probability-world/: THEMES.md  formula-bank.json  sim-hub.registry.json
frontend/: Dockerfile.dev  README.md  frontend-cleanup-detector.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/TECH_NOTES/: lesson-nav-audit.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: lesson-flow.e2e.test.tsx  lesson-navigation.e2e.test.tsx
frontend/src/learning/: ADVANCED_SLIDE_SYSTEM.md  continue.ts  debug.ts  flow.ts  progress.ts  reset.ts
frontend/src/realtime/: sse.ts
frontend/src/services/: api.ts  cache.ts
frontend/src/styles/: brilliant-design-system.css  globals.css
frontend/src/types/: react-katex.d.ts
frontend/src/utils/: lessonDataGenerator.ts  lessonOrder.ts  (+3 more)
stats-learning-backend/: .env.example  IMPORT_SUCCESS_SUMMARY.md  README.md  backend-cleanup-detector.py  pyproject.toml  run_backend.ps1
stats-learning-backend/alembic/: env.py
stats-learning-backend/app/: __init__.py  main.py
stats-learning-backend/app/api/v1/: api.py
stats-learning-backend/app/api/v1/routes/: auth.py  gamification.py  me.py  quiz.py
stats-learning-backend/app/core/: events.py  logging.py  security.py
stats-learning-backend/app/db/: __init__.py  base.py  init_db.py
stats-learning-backend/app/models/: __init__.py  gamification.py  lesson.py  level.py  question.py  user.py  world.py
stats-learning-backend/app/schemas/: __init__.py  auth.py  common.py
stats-learning-backend/app/services/: auth_service.py
stats-learning-backend/app/services/sim_service/: __init__.py  clt_machine.py  z_test_prop.py
stats-learning-backend/scripts/: add_duolingo_columns.py  e2e_lesson_flow.py  init-db.sql  migrate_duolingo_features.py  seed.py  test_question_types.py  verify_columns.py
(+96 files in other folders)
